# Playlunky

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  appveyor.yml  conanfile.txt
.github/workflows/: CI.yml  Formatting.yml  Nightly.yml  Publish.yml  install_msvc1439.ps1
cmake/: conan.cmake  conan_profile
lib/detours/: detours.lib  detours_d.lib
res/: RCa24540  extra_pipes.lua  playlunky.ini  playlunky64.rc  playlunky_installer.aps  playlunky_installer.rc  playlunky_launcher.aps  playlunky_launcher.rc  playlunky_uninstaller.rc  readme.txt  resource_playlunky64.h  steam_appid.txt
source/installer/: main.cpp
source/launcher/: main.cpp
source/playlunky/: debug.cpp  detour.cpp  detour.h  detour_entry.h  detour_helper.h  dll_main.cpp  file_io.cpp  file_io.h  log.cpp  log.h  playlunky.cpp  playlunky.h  playlunky_settings.cpp  playlunky_settings.h  sigfun.h  sigscan.cpp
source/playlunky/detour/: debug.cpp  debug.h  detour.cpp  detour.h  detour_entry.h  detour_helper.h  file_io.cpp  file_io.h  fmod_crap.cpp  fmod_crap.h  imgui.cpp  imgui.h  log.cpp  logger.cpp  logger.h  save_game.cpp  save_game.h  sigfun.h  sigscan.cpp  sigscan.h  win_main.cpp  win_main.h
source/playlunky/mod/: bug_fixes.cpp  bug_fixes.h  cache_audio_file.cpp  cache_audio_file.h  chacha.cpp  chacha.h  character_sticker_gen.cpp  character_sticker_gen.h  dds_conversion.cpp  dds_conversion.h  decode_audio_file.cpp  decode_audio_file.h  dm_preview_merger.cpp  dm_preview_merger.h  entity_data_extraction.cpp  entity_data_extraction.h  extract_game_assets.cpp  extract_game_assets.h  fix_mod_structure.cpp  fix_mod_structure.h  generate_sticker_pixel_art.cpp  generate_sticker_pixel_art.h  image_processing.cpp  image_processing.h  known_files.h  level_data.h  level_parser.cpp  level_parser.h  mod_database.cpp  mod_database.h  mod_info.cpp  mod_info.h  mod_manager.cpp  mod_manager.h  patch_character_definitions.cpp  patch_character_definitions.h  patch_character_names.cpp  patch_character_names.h  png_dds_conversion.cpp  png_dds_conversion.h  (+25 more)
source/playlunky/util/: color.cpp  color.h  file_watch.cpp  file_watch.h  image.cpp  image.h  regex.h
source/playlunky/util/imgui/: imgui_impl_win32.cpp
source/shared/: algorithms.h  plfont.h  util.cpp  util.h
source/shared/util/: algorithms.cpp  algorithms.h  call_once.h  concepts.h  file.cpp  file.h  format.h  function_pointer.h  get_proc.cpp  get_proc.h  on_scope_exit.h  span_util.h  tokenize.h  unzip_file.cpp  unzip_file.h
source/uninstaller/: main.cpp
source/version/: version.cpp  version.h
submodules/: CMakeLists.txt
